[project]
name = "iceberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mido[python-rtmidi,rtmidi]>=1.3.3",
    "python-rtmidi>=1.5.8",
    "ruff>=0.15.1",
    "torch>=2.10.0",
    "ty>=0.0.17",
    "watchdog>=6.0.0",
]
