[project]
name = "iceberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mido>=1.3.3",
    "numpy>=2.4.2",
    "python-rtmidi>=1.5.8",
    "ruff>=0.15.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "ty>=0.0.17",
    "watchdog>=6.0.0",
]
